updated stylelintrc.json file to address ignoring files and properly parsing scss

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,11 +1,16 @@
 {
+    "ignoreFiles": [
+        "./**/node_modules/**",
+        "./**/deps/**",
+        "./**/build/**"
+    ],
     "extends": "stylelint-config-standard",
+    "customSyntax": "postcss-scss",
     "plugins": [
         "stylelint-scss"
     ],
     "rules": {
         "at-rule-no-unknown": null,
         "scss/at-rule-no-unknown": true
-
     }
 }
