fix for cleaning docs

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "npm run lint:css && npm run lint:js",
     "find-unused-css": "node list-unused-css.js",
     "build:docs": "npm run clean:docs && cd autodocs && make html",
-    "clean:docs": "rm -rf autodocs/_build && rm -r autodocs/generated"
+    "clean:docs": "rm -rf autodocs/_build && rm -rf autodocs/generated"
   },
   "repository": {
     "type": "git",
