--- a/extension/writing-process/src/manifest.json
+++ b/extension/writing-process/src/manifest.json
@@ -35,6 +35,22 @@
         "matches": ["*://docs.google.com/document/*"],
 	    "js": ["3rdparty/sha256.js", "writing_common.js", "writing.js"]
     }],
+    "web_accessible_resources": [{
+        "resources": ["inject.js"],
+        "matches": ["*://docs.google.com/*"],
+        "use_dynamic_url": true
+    }],
+    "background": {
+        "service_worker": "service_worker.js"
+    },
+    "permissions": [
+        "webRequest",
+        "identity",
+        "identity.email",
+        "storage",
+        "scripting",
+        "activeTab"
+    ],
     "host_permissions": [
         "*://docs.google.com/document/*"
     ],
