--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -23,8 +23,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install --default-timeout=1000 -r requirements.txt
-        pip install modules/writing_observer/
-        pip -v install modules/lo_dash_react_components/
+        pip install -v modules/lo_dash_react_components
         pip install modules/wo_highlight_dashboard/
     - name: Unit testing with pytest
       run: |
