--- a/extension/writing-process/src/manifest.json
+++ b/extension/writing-process/src/manifest.json
@@ -2,10 +2,10 @@
     "name": "__MSG_appName__",
     "short_name": "__MSG_appShortName__",
     "description": "__MSG_appDescription__",
-    "homepage_url": "http://chrome.google.com/webstore",
+    "homepage_url": "https://github.com/ETS-Next-Gen/writing_observer/tree/master/extension/writing-process",
     "incognito": "not_allowed",
-    "version": "0.0.0.1",
-    "version_name": "0.0.0.1",
+    "version": "1.0.0.2",
+    "version_name": "1.0.0.2",
     "manifest_version": 3,
     "default_locale": "en",
     "minimum_chrome_version": "88",
