added more documentation, added missing value check, and added LOPanelLayout

--- a/modules/wo_common_student_errors/setup.cfg
+++ b/modules/wo_common_student_errors/setup.cfg
@@ -10,7 +10,7 @@ include_package_data = true
 
 [options.entry_points]
 lo_modules =
-   lo_core = wo_common_student_errors.module
+   wo_common_student_errors = wo_common_student_errors.module
 
 [options.package_data]
 wo_common_student_errors = dashboard/*
