--- a/modules/wo_highlight_dashboard/setup.cfg
+++ b/modules/wo_highlight_dashboard/setup.cfg
@@ -10,7 +10,7 @@ include_package_data = true
 
 [options.entry_points]
 lo_modules =
-   lo_core = wo_highlight_dashboard.module
+   wo_highlight_dashboard = wo_highlight_dashboard.module
 
 [options.package_data]
 wo_highlight_dashboard = dashboard/*
