--- a/modules/wo_common_student_errors/setup.cfg
+++ b/modules/wo_common_student_errors/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = Writing Observer Teacher Error View
+name = Writing Observer Common Student Errors
 description = Dashboard for viewing errors across a classroom of students.
 url = https://github.com/ETS-Next-Gen/writing_observer
 version = 0.1
