--- a/modules/lo_dash_react_components/package.json
+++ b/modules/lo_dash_react_components/package.json
@@ -47,6 +47,7 @@
     "react-router": "^6.8.2",
     "react-router-dom": "^6.8.2",
     "react-scripts": "^5.0.1",
+    "react-tooltip": "^5.20.0",
     "recharts": "^2.4.3",
     "web-vitals": "^2.1.4"
   },
