added openai key to creds.yaml and made gpt call non blocking

--- a/learning_observer/learning_observer/creds.yaml.example
+++ b/learning_observer/learning_observer/creds.yaml.example
@@ -92,4 +92,5 @@ server:
     port: 8888     # Optional. Pick a different port.
 modules:
     writing_observer:
-        use_nlp: true
+        use_nlp: false
+        openai_api_key: '' # can also be set with OPENAI_API_KEY environment variable
