--- a/modules/lo_dash_react_components/package.json
+++ b/modules/lo_dash_react_components/package.json
@@ -77,8 +77,8 @@
     "webpack-serve": "3.1.0"
   },
   "engines": {
-    "node": ">=8.11.0",
-    "npm": ">=6.1.0"
+    "npm": ">=8.11.0",
+    "node": ">=16.0.0 <17.0.0"
   },
   "browserslist": {
     "production": [
