--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -24,6 +24,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install --default-timeout=1000 -r requirements.txt
         pip install -v modules/lo_dash_react_components
+        pip install modules/lo_dash_react_components
         pip install modules/wo_highlight_dashboard/
     - name: Unit testing with pytest
       run: |
