--- a/.github/actions/install-dependencies/action.yml
+++ b/.github/actions/install-dependencies/action.yml
@@ -1,24 +1,27 @@
 name: Setup dependencies
 description: Sets up and install all common dependencies
 
+inputs:
+  python-version:
+    description: "Python version to use"
+    required: true
 runs:
   using: "composite"
   steps:
-  - name: Checkout code
-    uses: actions/checkout@v3
-  - name: Set up Python ${{ matrix.python-version }}
+  - name: Set up Python ${{ inputs.python-version }}
     uses: actions/setup-python@v4
     with:
-      python-version: ${{ matrix.python-version }}
+      python-version: ${{ inputs.python-version }}
       cache: 'pip'
   - name: Set up Node JS
     uses: actions/setup-node@v3
     with:
-      node-version: '.nvmrc'
+      node-version-file: '.nvmrc'
       cache: 'npm'
   - name: Install Learning Observer dependencies
     run: |
       python -m pip install --upgrade pip
-      pip install -r requirements.txt
-      pip install pycodestyle
+      pip install --default-timeout=1000 -r requirements.txt
+      pip install modules/lo_dash_react_components
+      pip install modules/lo_dash_react_components
       npm ci
