--- a/.github/actions/lint/action.yml
+++ b/.github/actions/lint/action.yml
@@ -10,6 +10,7 @@ inputs:
     required: true
 runs:
   using: "composite"
+  shell: bash
   steps:
   - name: Set up Python ${{ inputs.python-version }}
     uses: actions/setup-python@v4
