--- a/.github/actions/lint/action.yml
+++ b/.github/actions/lint/action.yml
@@ -19,17 +19,23 @@ runs:
     run: |
       python -m pip install --upgrade pip
       pip install pycodestyle
+    shell: bash
   - name: Set up Node JS
     uses: actions/setup-node@v3
     with:
       node-version-file: '.nvmrc'
   - name: Install Node dependencies
     run: npm ci
+    shell: bash
   - name: Set module directory
     run: echo "MODULEDIR=${{ inputs.module-dir }}" >> $GITHUB_ENV
+    shell: bash
   - name: Lint Python
     run: pycodestyle --ignore=E501,W503 $(git ls-files "${MODULEDIR}*.py")
+    shell: bash
   - name: Lint JS
     run: npm run lint:js
+    shell: bash
   - name: Lint CSS
     run: npm run lint:css
+    shell: bash
