testing node changes

--- a/.github/actions/install-dependencies/action.yml
+++ b/.github/actions/install-dependencies/action.yml
@@ -16,8 +16,9 @@ runs:
   - name: Set up Node JS
     uses: actions/setup-node@v3
     with:
-      node-version-file: '.nvmrc'
-      cache: 'npm'
+      node-version-file: .nvmrc
+      cache: npm
+      cache-dependency-path: ./package-lock.json
   - name: Install Learning Observer dependencies
     run: |
       python -m pip install --upgrade pip
