--- a/.github/actions/lint/action.yml
+++ b/.github/actions/lint/action.yml
@@ -23,7 +23,9 @@ runs:
   - name: Set up Node JS
     uses: actions/setup-node@v3
     with:
-      node-version-file: '.nvmrc'
+      node-version-file: .nvmrc
+      cache: npm
+      cache-dependency-path: ./package-lock.json
   - name: Install Node dependencies
     run: npm install
     shell: bash
