--- a/.github/actions/install-dependencies/action.yml
+++ b/.github/actions/install-dependencies/action.yml
@@ -17,7 +17,7 @@ runs:
     uses: actions/setup-node@v3
     with:
       node-version-file: .nvmrc
-      cache: npm
+      cache: 'npm'
       cache-dependency-path: ./package-lock.json
   - name: Install Learning Observer dependencies
     run: |
