--- a/.github/actions/lint/action.yml
+++ b/.github/actions/lint/action.yml
@@ -24,7 +24,7 @@ runs:
     uses: actions/setup-node@v3
     with:
       node-version-file: .nvmrc
-      cache: npm
+      cache: 'npm'
       cache-dependency-path: ./package-lock.json
   - name: Install Node dependencies
     run: npm install
