--- a/requirements.txt
+++ b/requirements.txt
@@ -18,8 +18,8 @@ dash-html-components
 dash-table
 faker
 filetype
-git+https://github.com/pmitros/tsvx.git@09bf7f33107f66413d929075a8b54c36ca581dae#egg=tsvx
-git+https://github.com/testlabauto/loremipsum.git@b7bd71a6651207ef88993045cd755f20747f2a1e#egg=loremipsum
+tsvx @ git+https://github.com/pmitros/tsvx.git@09bf7f33107f66413d929075a8b54c36ca581dae#egg=tsvx
+loremipsum @ git+https://github.com/testlabauto/loremipsum.git@b7bd71a6651207ef88993045cd755f20747f2a1e#egg=loremipsum
 google-auth
 ipython
 invoke
@@ -47,6 +47,7 @@ svgwrite
 uvloop
 watchdog
 wikipedia
--e gitserve
--e learning_observer
--e modules/writing_observer
+
+writing_observer @ git+https://github.com/ETS-Next-Gen/writing_observer.git#subdirectory=modules/writing_observer
+gitserve @ git+https://github.com/ETS-Next-Gen/writing_observer.git#subdirectory=gitserve
+lo_dash_react_components @ git+https://github.com/ETS-Next-Gen/writing_observer.git#subdirectory=modules/lo_dash_react_components
