adressed LT errors, added errors from execution dag to debug log, styling and linting, testing packages find with modules

--- a/modules/wo_bulk_essay_analysis/setup.cfg
+++ b/modules/wo_bulk_essay_analysis/setup.cfg
@@ -5,12 +5,9 @@ url = https://github.com/ETS-Next-Gen/writing_observer
 version = 0.1
 
 [options]
-packages = wo_bulk_essay_analysis
+packages = find:
 include_package_data = true
 
 [options.entry_points]
 lo_modules =
    wo_bulk_essay_analysis = wo_bulk_essay_analysis.module
-
-[options.package_data]
-wo_bulk_essay_analysis = dashboard/*
