added setup package find fix to other modules

--- a/modules/wo_common_student_errors/setup.cfg
+++ b/modules/wo_common_student_errors/setup.cfg
@@ -5,7 +5,7 @@ url = https://github.com/ETS-Next-Gen/writing_observer
 version = 0.1
 
 [options]
-packages = wo_common_student_errors
+packages = find:
 include_package_data = true
 
 [options.entry_points]
