--- a/modules/wo_highlight_dashboard/setup.cfg
+++ b/modules/wo_highlight_dashboard/setup.cfg
@@ -5,7 +5,7 @@ url = https://github.com/ETS-Next-Gen/writing_observer
 version = 0.1
 
 [options]
-packages = wo_highlight_dashboard
+packages = find:
 include_package_data = true
 
 [options.entry_points]
