--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -22,10 +22,7 @@ jobs:
     - name: Install Python dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install --default-timeout=1000 -r requirements.txt
-        pip install -v modules/lo_dash_react_components
-        pip install modules/lo_dash_react_components
-        pip install modules/wo_highlight_dashboard/
+        pip install -e learning_observer/[awe,wo]
     - name: Unit testing with pytest
       run: |
         pytest modules/wo_highlight_dashboard/
