integrated websocketlogger, need to test using it outside of just running node lo_event.js

--- a/modules/lo_event/package.json
+++ b/modules/lo_event/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "indexeddb-js": "^0.0.14",
     "jasmine": "^5.1.0",
-    "sqlite3": "^5.1.6"
+    "sqlite3": "^5.1.6",
+    "ws": "^8.14.2"
   }
 }
