updated test framework to use a dockerfile

--- a/requirements.txt
+++ b/requirements.txt
@@ -23,8 +23,10 @@ loremipsum @ git+https://github.com/testlabauto/loremipsum.git@b7bd71a6651207ef8
 google-auth
 ipython
 invoke
+jsonschema
 js2py
 lxml
+multiprocess
 myst_parser
 names
 numpy
