--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -5,24 +5,10 @@ on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ["3.9", "3.10"]
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Set up Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: '16.x'
-    - name: Install Python dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -e learning_observer/[awe,wo]
-    - name: Unit testing with pytest
-      run: |
-        pytest modules/wo_highlight_dashboard/
+    - name: Build Docker image
+      run: docker build -t lotesting .
+    - name: Run tests
+      run: docker run lotesting
