Starting work on redux logger for test framework, and abstracting out other loggers

--- a/modules/lo_event/package.json
+++ b/modules/lo_event/package.json
@@ -22,5 +22,8 @@
     "jasmine": "^5.1.0",
     "sqlite3": "^5.1.6",
     "ws": "^8.14.2"
+  },
+  "devDependencies": {
+    "redux": "^4.2.1"
   }
 }
