adjusted imports and fixed redux logger import to be on init

--- a/modules/lo_event/package.json
+++ b/modules/lo_event/package.json
@@ -2,7 +2,7 @@
   "name": "lo_event",
   "version": "0.0.1",
   "description": "Event logging library for the Learning Observer",
-  "main": "lo_event/lo_event.js",
+  "main": "lo_event/index.js",
   "scripts": {
     "test": "jasmine \"tests/*.test.js\""
   },
