Better package description

--- a/modules/lo_event/setup.cfg
+++ b/modules/lo_event/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = LO Event
-description = Events module for the learning observer platform
+description = Outgoing event module for the learning observer platform
 version = 0.0.1
 
 [options]
