Adding log files, temp dirs, etc. to .gitignore to reduce the noise when running git status

--- a/.gitignore
+++ b/.gitignore
@@ -22,10 +22,19 @@ learning_observer/learning_observer/static_data/repos/
 learning_observer/learning_observer/static_data/dash_assets/
 learning_observer/learning_observer/static_data/courses.json
 learning_observer/learning_observer/static_data/students.json
-learning_observer/passwd.lo
+learning_observer/passwd*
 --*
 .venv/
 .vscode/
 build/
 dist/
 node_modules
+*.orig
+lo_event*tgz
+*.log
+LanguageTool-stable.zip
+LanguageTool-5.4
+package-lock.json
+learning_observer/learning_observer/static_data/google/
+learning_observer/learning_observer/static_data/admins.yaml
+.ipynb_checkpoints/
