--- a/modules/lo_event/package.json
+++ b/modules/lo_event/package.json
@@ -4,7 +4,9 @@
   "description": "Event logging library for the Learning Observer",
   "main": "lo_event/lo_event.js",
   "scripts": {
-    "test": "jasmine \"tests/*.test.js\""
+    "test": "jasmine \"tests/*.test.js\"",
+    "test-verbose": "jasmine --verbose \"tests/*.test.js\"",
+    "dev": "parcel examples/test.html"
   },
   "repository": {
     "type": "git",
@@ -18,6 +20,7 @@
   "homepage": "https://github.com/ETS-Next-Gen/writing_observer#readme",
   "type": "module",
   "dependencies": {
+    "http-server": "^14.1.1",
     "indexeddb-js": "^0.0.14",
     "jasmine": "^5.1.0",
     "redux-thunk": "^2.4.2",
@@ -25,6 +28,10 @@
     "ws": "^8.14.2"
   },
   "devDependencies": {
+    "@babel/cli": "^7.24.5",
+    "@babel/core": "^7.24.5",
+    "@babel/preset-env": "^7.24.5",
+    "parcel": "^2.12.0",
     "redux": "^4.2.1"
   }
 }
