Clean build, test cases for importing redux, starting to work on assessment

--- a/modules/lo_event/package.json
+++ b/modules/lo_event/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "jasmine \"tests/*.test.js\"",
     "test-verbose": "jasmine --verbose \"tests/*.test.js\"",
-    "browser_events": "parcel examples/browser_events.html"
+    "browser_events": "parcel examples/browser_events.html --open",
+    "redux_loop": "parcel examples/redux_loop.html --open",
+    "clean": "rm -Rf .cache/ dist/ .parcel-cache/ lo_event-*.tgz"
   },
   "repository": {
     "type": "git",
@@ -20,10 +22,13 @@
   "homepage": "https://github.com/ETS-Next-Gen/writing_observer#readme",
   "type": "module",
   "dependencies": {
+    "aws-sdk": "^2.1614.0",
     "http-server": "^14.1.1",
     "indexeddb-js": "^0.0.14",
     "jasmine": "^5.1.0",
     "lodash": "^4.17.21",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "redux-thunk": "^2.4.2",
     "sqlite3": "^5.1.6",
     "ws": "^8.14.2"
@@ -32,13 +37,19 @@
     "@babel/cli": "^7.24.5",
     "@babel/core": "^7.24.5",
     "@babel/preset-env": "^7.24.5",
+    "assert": "^2.1.0",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
     "events": "^3.3.0",
+    "os-browserify": "^0.3.0",
     "parcel": "^2.12.0",
+    "path-browserify": "^1.0.1",
     "process": "^0.11.10",
+    "querystring-es3": "^0.2.1",
     "redux": "^4.2.1",
     "stream-browserify": "^3.0.0",
+    "url": "^0.11.3",
+    "util": "^0.12.5",
     "vm-browserify": "^1.1.2"
   }
 }
