--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,6 +5,8 @@ services:
     volumes:
       - ./:/app
     image: learning-observer-image:latest
+    stdin_open: true  # Keep standard input open
+    tty: true         # Allocate a pseudo-TTY
     restart: always
     ports:
       - 8888:8888
