Bug fixes, and moving components to lo_assess

--- a/modules/lo_event/lo_event/lo_assess/component.jsx.template
+++ b/modules/lo_event/lo_event/lo_assess/component.jsx.template
@@ -2,7 +2,7 @@
 
 {{{ imports }}}
 
-export default function {{ componentName }}( { children } ) {
+export function {{ componentName }}( { children } ) {
   return (
 {{{ xml }}});
 };
