--- a/modules/toy-assess/package.json
+++ b/modules/toy-assess/package.json
@@ -16,6 +16,7 @@
     "bufferutil": "^4.0.8",
     "indexeddb-js": "^0.0.14",
     "jasmine": "^5.1.0",
+    "lo_event": "file:../lo_event/lo_event-0.0.2.tgz",
     "mapbox": "^1.0.0-beta10",
     "mock-aws-s3": "^4.0.2",
     "next": "13.5.5",
@@ -28,8 +29,10 @@
     "utf-8-validate": "^6.0.3"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.24.7",
     "@mapbox/node-pre-gyp": "^1.0.11",
     "autoprefixer": "^10",
+    "babel-loader": "^9.1.3",
     "better-react-mathjax": "^2.0.3",
     "eslint": "^8",
     "eslint-config-next": "13.5.5",
