--- a/modules/lo_dash_react_components/MANIFEST.in
+++ b/modules/lo_dash_react_components/MANIFEST.in
@@ -10,3 +10,4 @@ recursive-include lo_dash_react_components/css *.css
 include README.md
 include LICENSE
 include package.json
+include requirements.txt
