--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -28,4 +28,4 @@ python:
    install:
    - requirements: requirements.txt
    - method: pip
-     path: learning_obserser/
+     path: learning_observer/
