updated lo path and trying autosummary item

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -28,4 +28,4 @@ python:
    install:
    - requirements: requirements.txt
    - method: pip
-     path: learning_observer/
+     path: ./learning_observer/
