--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -26,4 +26,6 @@ sphinx:
 # Optionally declare the Python requirements required to build your docs
 python:
    install:
-   - requirements: requirements.txt
+   - method: pip
+     path: ./learning_observer/
+     editable: true
