--- a/devops/tasks/hosts.ini
+++ b/devops/tasks/hosts.ini
@@ -1,3 +1,4 @@
 [servers]
 brostpS2 ansible_host=3.84.57.3 ansible_user=ubuntu ansible_ssh_private_key_file=/root/.ssh/pbrostaws.pem
 coglabs ansible_host=44.201.217.150 ansible_user=ubuntu ansible_ssh_private_key_file=/root/.ssh/pbrostaws.pem
+daclassroom ansible_host=18.207.219.42 ansible_user=ubuntu ansible_ssh_private_key_file=/root/.ssh/pbrostaws.pem
