file case syntax fixed, added cred.yaml to deployment files, added additional tasks to do some of env fab script

--- a/devops/ansible/default_flock/files.yaml
+++ b/devops/ansible/default_flock/files.yaml
@@ -2,4 +2,8 @@ files:
   - name: authorized_keys
   - name: htpasswd
   - name: nginx
+  - name: creds.yaml
+  - name: lo.sh
+  - name: password.lo
+  - name: systemd
  
