--- a/devops/ansible/tasks/C_install_repos.yaml
+++ b/devops/ansible/tasks/C_install_repos.yaml
@@ -10,7 +10,7 @@
 
     - name: Assign variables
       set_fact:
-        yaml_file: "REPOS.YAML"
+        yaml_file: "repos.yaml"
         yaml_dir: "{{ flock_config }}/config/{{ inventory_hostname }}/yaml"
        
     - name: Read repository configuration
