change to systemd

--- a/devops/ansible/default_flock/yaml/FILES.YAML
+++ b/devops/ansible/default_flock/yaml/FILES.YAML
@@ -2,7 +2,7 @@ files:
   - name: nginx
     dest: /etc/nginx/sites-available/{hostname}
   - name: authorized_keys
-    dest: /home/ubuntu/authorized_keys
+    dest: /home/ubuntu/.ssh/authorized_keys
   - name: passwd.lo
     dest: /home/ubuntu/writing_observer/learning_observer/passwd.lo
   - name: lo.sh
