--- a/devops/tasks/hosts.ini
+++ b/devops/tasks/hosts.ini
@@ -1,4 +1,6 @@
-[servers]
-brostpS2 ansible_host=3.84.57.3 ansible_user=ubuntu ansible_ssh_private_key_file=/root/.ssh/pbrostaws.pem
+[aws_servers]
+open-house ansible_host=3.87.42.157 ansible_user=ubuntu ansible_ssh_private_key_file=/root/.ssh/pbrostaws.pem
+da-i18n ansible_host=54.166.118.68 ansible_user=ubuntu ansible_ssh_private_key_file=/root/.ssh/pbrostaws.pem
+da ansible_host=44.202.219.209 ansible_user=ubuntu ansible_ssh_private_key_file=/root/.ssh/pbrostaws.pem
 coglabs ansible_host=44.201.217.150 ansible_user=ubuntu ansible_ssh_private_key_file=/root/.ssh/pbrostaws.pem
 daclassroom ansible_host=18.207.219.42 ansible_user=ubuntu ansible_ssh_private_key_file=/root/.ssh/pbrostaws.pem
