dynamic_hosts.py created

--- a/devops/tasks/hosts.ini
+++ b/devops/tasks/hosts.ini
@@ -1,4 +1,4 @@
-[aws_servers]
+[servers]
 open-house ansible_host=3.87.42.157 ansible_user=ubuntu ansible_ssh_private_key_file=/root/.ssh/pbrostaws.pem
 da-i18n ansible_host=54.166.118.68 ansible_user=ubuntu ansible_ssh_private_key_file=/root/.ssh/pbrostaws.pem
 da ansible_host=44.202.219.209 ansible_user=ubuntu ansible_ssh_private_key_file=/root/.ssh/pbrostaws.pem
