--- a/modules/lo_event/package.json
+++ b/modules/lo_event/package.json
@@ -35,6 +35,7 @@
     "react-redux": "^9.1.2",
     "redux-thunk": "^2.4.2",
     "sqlite3": "^5.1.6",
+    "uuid": "^10.0.0",
     "ws": "^8.14.2",
     "yargs": "^17.7.2"
   },
@@ -58,5 +59,8 @@
     "url": "^0.11.3",
     "util": "^0.12.5",
     "vm-browserify": "^1.1.2"
+  },
+  browser: {
+    "fs": false
   }
 }
