switch from header to query param for load balancing

--- a/devops/nginx-static-loadbalance.conf
+++ b/devops/nginx-static-loadbalance.conf
@@ -4,7 +4,7 @@ upstream server1 { server localhost:8889; }
 upstream server2 { server localhost:8890; }
 
 # Extract first character of the student-id header
-map $http_student $upstream_server {
+map $arg_student $upstream_server {
     default server0;   # default if no match or header is absent
     "~^[0]" server0;
     "~^[1]" server1;
@@ -28,7 +28,7 @@ server {
     listen 80;
 
     location / {
-        proxy_set_header Student $http_student;
+        # proxy_set_header Student $http_student;
 
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
