fix typo in load balancing nginx config

--- a/devops/nginx-static-loadbalance.conf
+++ b/devops/nginx-static-loadbalance.conf
@@ -3,7 +3,7 @@ upstream server0 { server localhost:8888; }
 upstream server1 { server localhost:8889; }
 upstream server2 { server localhost:8890; }
 
-# Extract first character of the student-id header
+# Extract first character of the student header
 map $arg_student $upstream_server {
     default server0;   # default if no match or header is absent
     "~^[0]" server0;
