--- a/modules/lo_dash_react_components/package.json
+++ b/modules/lo_dash_react_components/package.json
@@ -2,83 +2,59 @@
   "name": "lo_dash_react_components",
   "version": "0.0.1",
   "description": "React and Dash components for Learning Observer dashboards",
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/ETS-Next-Gen/lo-dash-react-components.git"
-  },
-  "bugs": {
-    "url": "https://github.com/ETS-Next-Gen/lo-dash-react-components/issues"
-  },
-  "homepage": "https://github.com/ETS-Next-Gen/lo-dash-react-components",
   "main": "build/index.js",
   "scripts": {
-    "webpack-start": "webpack-serve --config ./webpack.serve.config.js --open",
-    "describe-webpack-start": "echo Run react app (without dash) with WebPack, which is Dash's default.",
+    "webpack-start": "webpack serve --config ./webpack.serve.config.js --open",
     "react-start": "react-scripts start",
-    "describe-react-start": "echo Run react app (without dash) with React Scripts, which probably gives the most rapid workflow.",
     "dash-start": "nodemon",
-    "describe-dash-start": "echo Run full dash app with nodemon. This requires a rebuild each time files change.",
-    "validate-init": "python _validate_init.py",
-    "prepublishOnly": "npm run validate-init",
     "build:js": "webpack --mode production",
     "build:backends": "dash-generate-components ./src/lib/components lo_dash_react_components -p package-info.json --r-prefix '' --jl-prefix '' --ignore \\.test\\.",
-    "build:backends-activated": "(. venv/bin/activate || venv\\scripts\\activate && npm run build:py_and_r)",
     "build": "npm run build-css && npm run build:js && npm run build:backends",
-    "build:activated": "npm run build:js && npm run build:backends-activated",
-    "build-css": "node-sass --recursive src/lib -o lo_dash_react_components/css",
-    "watch-css": "node-sass --recursive src/lib -o lo_dash_react_components/css --watch",
-    "start-all": "npm-run-all --parallel watch-css react-start webpack-start dash-start",
-    "clean-build": "rm -rf dist/ && rm -rf build/",
-    "build:python": "npm run clean-build && python setup.py sdist bdist_wheel"
+    "build-css": "sass --load-path=node_modules src/lib:lo_dash_react_components/css && postcss lo_dash_react_components/css/*.css --replace",
+    "watch-css": "sass --load-path=node_modules src/lib:lo_dash_react_components/css --watch",
+    "start-all": "npm-run-all --parallel watch-css react-start webpack-start dash-start"
   },
   "author": "Piotr Mitros <pmitros@ets.org>",
   "license": "AGPL-3.0",
+  "engines": {
+    "node": ">=22.0.0"
+  },
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.2.3",
-    "node-sass": "^9.0.0",
-    "nodemon": "^2.0.21",
-    "ramda": "^0.26.1",
-    "react": "^18.2.0",
-    "react-bootstrap": "^2.7.2",
-    "react-dom": "^18.2.0",
-    "react-router": "^6.8.2",
-    "react-router-dom": "^6.8.2",
+    "bootstrap": "^5.3.3",
+    "ramda": "^0.30.1",
+    "react": "^18.3.1",
+    "react-bootstrap": "^2.10.5",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.28.0",
     "react-scripts": "^5.0.1",
-    "react-tooltip": "^5.20.0",
-    "recharts": "^2.4.3",
-    "web-vitals": "^2.1.4"
+    "react-tooltip": "^5.28.0",
+    "recharts": "^2.13.3",
+    "web-vitals": "^4.2.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.4",
-    "@babel/plugin-proposal-object-rest-spread": "^7.5.4",
-    "@babel/preset-env": "^7.5.4",
-    "@babel/preset-react": "^7.0.0",
-    "@plotly/dash-component-plugins": "^1.2.0",
-    "@plotly/webpack-dash-dynamic-import": "^1.2.0",
-    "babel-eslint": "^10.0.2",
-    "babel-loader": "^8.0.6",
-    "copyfiles": "^2.1.1",
-    "css-loader": "^3.0.0",
-    "eslint": "^6.0.1",
-    "eslint-config-prettier": "^6.0.0",
-    "eslint-plugin-import": "^2.18.0",
-    "eslint-plugin-react": "^7.14.2",
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.25.9",
+    "autoprefixer": "^10.4.20",
+    "babel-loader": "^9.2.1",
+    "css-loader": "^7.1.2",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-standard": "^4.1.0",
+    "nodemon": "^3.1.7",
     "npm-run-all": "^4.1.5",
-    "prop-types": "^15.7.2",
-    "react-docgen": "^4.1.1",
-    "style-loader": "^0.23.1",
-    "styled-jsx": "^5.1.2",
-    "terser-webpack-plugin": "^2.3.0",
-    "webpack": "4.37.0",
-    "webpack-cli": "3.3.6",
-    "webpack-serve": "3.1.0"
-  },
-  "engines": {
-    "npm": ">=8.11.0",
-    "node": ">=16.0.0 <17.0.0"
+    "postcss": "^8.4.47",
+    "postcss-loader": "^8.1.1",
+    "prettier": "^3.3.3",
+    "sass": "^1.80.6",
+    "style-loader": "^4.0.0",
+    "tailwindcss": "^3.4.14",
+    "webpack": "^5.96.1",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.1.0"
   },
   "browserslist": {
     "production": [
@@ -87,8 +63,8 @@
       "not op_mini all"
     ],
     "development": [
-      "last 1 firefox version",
       "last 1 chrome version",
+      "last 1 firefox version",
       "last 1 safari version"
     ]
   }
