refactor load balancing to be between dashboard and extension requests

--- a/devops/nginx-static-loadbalance.conf
+++ b/devops/nginx-static-loadbalance.conf
@@ -1,35 +1,17 @@
 # Define upstream servers
-upstream server0 { server localhost:8888; }
-upstream server1 { server localhost:8889; }
-upstream server2 { server localhost:8890; }
+upstream extension_server { server localhost:8888; }
+upstream dashboard_server { server localhost:8889; }
 
-# Extract first character of the student header
-map $arg_student $upstream_server {
-    default server0;   # default if no match or header is absent
-    "~^[0]" server0;
-    "~^[1]" server1;
-    "~^[2]" server2;
-    "~^[3]" server0;
-    "~^[4]" server1;
-    "~^[5]" server2;
-    "~^[6]" server0;
-    "~^[7]" server1;
-    "~^[8]" server2;
-    "~^[9]" server0;
-    "~^[aA]" server1;
-    "~^[bB]" server2;
-    "~^[cC]" server0;
-    "~^[dD]" server1;
-    "~^[eE]" server2;
-    "~^[fF]" server0;
+map $arg_source $upstream_server {
+    default extension_server;   # default if no match or query param is absent
+    "extension" extension_server;
+    "dashboard" dashboard_server;
 }
 
 server {
     listen 80;
 
     location / {
-        # proxy_set_header Student $http_student;
-
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
 
