re-added python build steps

--- a/modules/lo_dash_react_components/package.json
+++ b/modules/lo_dash_react_components/package.json
@@ -12,7 +12,9 @@
     "build": "npm run build-css && npm run build:js && npm run build:backends",
     "build-css": "sass --load-path=node_modules src/lib:lo_dash_react_components/css && postcss lo_dash_react_components/css/*.css --replace",
     "watch-css": "sass --load-path=node_modules src/lib:lo_dash_react_components/css --watch",
-    "start-all": "npm-run-all --parallel watch-css react-start webpack-start dash-start"
+    "start-all": "npm-run-all --parallel watch-css react-start webpack-start dash-start",
+    "clean-build:python": "rm -rf dist/ && rm -rf build/",
+    "build:python": "npm run clean-build:python && python setup.py sdist bdist_wheel"
   },
   "author": "Piotr Mitros <pmitros@ets.org>",
   "license": "AGPL-3.0",
