--- a/modules/lo_dash_react_components/package.json
+++ b/modules/lo_dash_react_components/package.json
@@ -10,8 +10,8 @@
     "build:js": "webpack --mode production",
     "build:backends": "dash-generate-components ./src/lib/components lo_dash_react_components -p package-info.json --r-prefix '' --jl-prefix '' --ignore \\.test\\.",
     "build": "npm run build-css && npm run build:js && npm run build:backends",
-    "build-css": "sass --load-path=node_modules src/lib:lo_dash_react_components/css && postcss lo_dash_react_components/css/*.css --replace",
-    "watch-css": "sass --load-path=node_modules src/lib:lo_dash_react_components/css --watch",
+    "build-css": "sass src/lib:lo_dash_react_components/css --no-source-map",
+    "watch-css": "sass src/lib:lo_dash_react_components/css --watch",
     "start-all": "npm-run-all --parallel watch-css react-start webpack-start dash-start",
     "clean-build:python": "rm -rf dist/ && rm -rf build/",
     "build:python": "npm run clean-build:python && python setup.py sdist bdist_wheel"
@@ -35,8 +35,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
     "@babel/preset-env": "^7.26.0",
     "@babel/preset-react": "^7.25.9",
+    "@plotly/webpack-dash-dynamic-import": "^1.3.0",
     "autoprefixer": "^10.4.20",
     "babel-loader": "^9.2.1",
     "css-loader": "^7.1.2",
@@ -48,11 +50,11 @@
     "eslint-plugin-standard": "^4.1.0",
     "nodemon": "^3.1.7",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.47",
-    "postcss-loader": "^8.1.1",
     "prettier": "^3.3.3",
+    "react-docgen": "^5.4.3",
     "sass": "^1.80.6",
     "style-loader": "^4.0.0",
+    "styled-jsx": "^5.1.6",
     "tailwindcss": "^3.4.14",
     "webpack": "^5.96.1",
     "webpack-cli": "^5.1.4",
